--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #feedback-widget{
     border: none;
-    background-color: #36C1B0;
+    background-color: #36BFAF;
     display: inline-table;
     position: absolute;
     color: white;
@@ -71,12 +71,12 @@ form{
     display: none;
     position: absolute;
     width:260px;
-    margin-top: 50px;
+/*    margin-top: 50px;*/
     background-color: #F9F9F9;
     font-family: Arial;
     padding-left: 20px;
     padding-right: 20px;
-    
+    color: rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 0 6px 4px -4px #E2E2E2;
     -moz-box-shadow: 0 6px 4px -4px #E2E2E2;
     box-shadow: 0 6px 4px -4px #E2E2E2;
