--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 #feedback-widget{
     border: none;
-    background-color: #36BFAF;
+    background-color: #36C1B0;
     display: inline-table;
     position: absolute;
     color: white;
     font-family: Arial;
     width: 50px;
     height: 50px;
+    bottom: 40px;
+    left: 30px;
+    
     -moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
 	border-radius: 50px;
@@ -63,7 +66,34 @@ button:active, button:focus{
     text-align: center;
     vertical-align: middle;
     line-height: 50px;
-    font-size: 16px;
+    font-size: 18px;
+}
+
+.reaction-bar{
+    display: inline-block !important;
+    color: rgba(0, 0, 0, 0.75);
+}
+
+.reaction-bar button{
+    outline: none;
+    border: none;
+    background-color: inherit;
+    margin-top: 12px;
+}
+
+.reaction-bar i{
+    display: inline-block !important;
+    font-size: 25px;
+    color: #C9B127;
+    transition: all 0.2s ease-in-out;
+}
+
+.reaction-bar i:hover{
+    display: inline-block !important;
+    font-size: 25px;
+    color: #C9B127;
+    transform: scale(1.2);
+    font-weight: 550;
 }
 
 form{
@@ -71,12 +101,14 @@ form{
     display: none;
     position: absolute;
     width:260px;
-/*    margin-top: 50px;*/
+    margin-top: 50px;
     background-color: #F9F9F9;
     font-family: Arial;
     padding-left: 20px;
     padding-right: 20px;
-    color: rgba(0, 0, 0, 0.75);
+    bottom: 40px;
+    left: 30px;
+    
     -webkit-box-shadow: 0 6px 4px -4px #E2E2E2;
     -moz-box-shadow: 0 6px 4px -4px #E2E2E2;
     box-shadow: 0 6px 4px -4px #E2E2E2;
