--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,119 @@
+/* Global */
+textarea {
+  width: 98%;
+  resize: none;
+  border: 1px solid #444;
+}
+
+textarea:focus {
+  outline: none;
+  border: 1px solid #aaa;
+}
+
+button {
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+}
+
+p.small {
+  font-size: 11px;
+  font-weight: 300;
+}
+
+/* Buttons */
+button:active, button:focus {
+  outline: none;
+  border: none;
+}
+
+.btn-default {
+  background-color: white;
+  color: #222;
+  border-radius: 1px;
+  border: 1px solid #222;
+  height: 35px;
+  width: 80px;
+  font-size: 14px;
+  float: right;
+  margin-bottom: 20px;
+  transition: all .3s;
+}
+
+.btn-default:focus,
+.btn-default:active,
+.btn-default:hover,
+.btn-default.active,
+.btn-default.active,
+.open > .dropdown-toggle.btn-default {
+  background: #222;
+  color: white;
+  box-shadow: none;
+  outline: 0 none;
+}
+
+/* Font awesome stuff */
+.fa-pencil-square-o {
+  line-height: 50px;
+  color: white;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  font-weight: 500;
+}
+
+.fa-times {
+  display: inline !important;
+  font-size: 18px;
+  color: white;
+  float: right;
+  line-height: 50px;
+  vertical-align: middle;
+  margin-right: 10px;
+  transition: all .3s ease-out;
+}
+
+.fa-times:hover {
+    color: #C33652;
+}
+
+.feedback-module {
+  font-size: 14px;
+  color: #222;
+}
+
+.feedback-module form {
+  z-index: 999;
+  display: none;
+  position: absolute;
+  width:260px;
+  margin-top: 50px;
+  background-color: #F9F9F9;
+  font-family: Arial;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: rgba(0, 0, 0, 0.75);
+  bottom: 40px;
+  left: 30px;
+  -webkit-box-shadow: 0 6px 4px -4px #E2E2E2;
+  -moz-box-shadow: 0 6px 4px -4px #E2E2E2;
+  box-shadow: 0 6px 4px -4px #E2E2E2;
+}
+
+.feedback-module form p {
+  font-weight: 500;
+}
+
+.feedback-module form > p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 #feedback-widget {
   border: none;
   background-color: #36BFAF;
@@ -22,22 +138,6 @@
   box-shadow: 0 6px 4px -4px #C9C9C9;
 }
 
-.item {
-  text-align: center;
-}
-
-.fa-pencil-square-o {
-  line-height: 50px;
-  color: white;
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 20px;
-  width: 50px;
-  height: 50px;
-  font-weight: 500;
-}
-
 #feedback-widget:hover .fa-pencil-square-o {
   display: none;
 }
@@ -50,15 +150,6 @@
   transition: width 1s;
 }
 
-button {
-  cursor: pointer;
-}
-
-button:active, button:focus {
-    outline: none;
-    border: none;
-}
-
 #provide_feedback {
   display: none;
   display: inline;
@@ -66,90 +157,46 @@ button:active, button:focus {
   vertical-align: middle;
   line-height: 50px;
   font-size: 18px;
-  }
-
-.fa-times {
-  display: inline !important;
-  font-size: 18px;
-  color: white;
-  float: right;
-  line-height: 50px;
-  vertical-align: middle;
-  margin-right: 10px;
 }
 
-.fa-times:hover {
-    color: #C33652;
+.item {
+  text-align: center;
 }
 
+
+/* Reactions */
 .reaction-bar {
   display: inline-block !important;
   color: rgba(0, 0, 0, 0.75);
+  padding-top: 20px;
+  padding-bottom: 15px;
  }
 
- .reaction-bar i {
- display: inline-block !important;
- font-size: 25px;
- color: rgb(132, 132, 132);
- transition: all 0.2s ease-in-out;
- margin-left: 20px;
- }
-
- .reaction-bar i:hover {
- display: inline-block !important;
- font-size: 25px;
- color: rgb(132, 132, 132);
- transform: scale(1.2);
- font-weight: 550;
- cursor: pointer;
+.reaction-bar p {
+  display: inline-block;
+  font-weight: 500;
 }
 
-form {
-  z-index: 999;
-  display: none;
-  position: absolute;
-  width:260px;
-  margin-top: 50px;
-  background-color: #F9F9F9;
-  font-family: Arial;
-  padding-left: 20px;
-  padding-right: 20px;
-  color: rgba(0, 0, 0, 0.75);
-  bottom: 40px;
-  left: 30px;
-  -webkit-box-shadow: 0 6px 4px -4px #E2E2E2;
-  -moz-box-shadow: 0 6px 4px -4px #E2E2E2;
-  box-shadow: 0 6px 4px -4px #E2E2E2;
+
+.reaction-bar i {
+  position: relative;
+  display: inline-block !important;
+  top: 4px;
+  font-size: 25px;
+  color: rgb(132, 132, 132);
+  transition: all 0.2s ease-in-out;
+  margin-left: 20px;
 }
 
-.btn-default {
-  background-color: rgba(0, 0, 0, 0.75);
-  color: white;
-  border-radius: 0;
-  border: none;
-  height: 35px;
-  width: 80px;
-  font-size: 14px;
-  float: right;
-  margin-bottom: 20px;
-}
-
-.btn-default:focus,
-.btn-default:active,
-.btn-default:hover,
-.btn-default.active,
-.btn-default.active,
-.open > .dropdown-toggle.btn-default {
-  background: rgba(0, 0, 0, 0.85);
-  color: white;
-  box-shadow: none;
-  outline: 0 none;
+.reaction-bar i:hover {
+  display: inline-block !important;
+  font-size: 25px;
+  color: rgb(132, 132, 132);
+  transform: scale(1.2);
+  font-weight: 550;
+  cursor: pointer;
 }
 
 .reaction-bar i.selected {
   color: rgb(210, 186, 51);
-}
-
-textarea {
-  width: 100%;
 }
