--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -39,9 +39,7 @@ a:hover {
 }
 
 /* SUMMARY */
-table tr td{
-    border: 1px solid black;
-}
+
 #emoji-table td .fa{
     display: table;
     font-size: 30px;
@@ -64,15 +62,16 @@ td > p{
 }
 
 #best-worst-page-table tr, td, th{
-    border: 1px solid black;
+    border: 0.5px solid grey;
 }
 
 #best-worst-page-table th{
-    padding-right: 20px;
+    background-color: #267b82;
+    color: white;
 }
 
 #best-worst-page-table td{
-    padding-right: 20px;
+    padding: 10px;
 }
 
 #best-worst-page-table td span{
@@ -100,4 +99,17 @@ td > p{
     display: block;
     position: relative;
     z-index: 0;
+}
+
+.fa-reaction{
+    color: white;
+}
+
+/* navbar */
+.w3-navbar li a{
+    color: white;
+}
+
+.headline{
+    color: #267b82;
 }
