--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -53,7 +53,6 @@ h2 {
     color: #222;
     margin: 0px;
     line-height: 1.2;
-    margin-bottom: 20px;
 }
 
 .topbar {
@@ -131,7 +130,7 @@ nav.effects ul li a:hover {
 }
 
 .post {
-    margin-bottom: 80px;
+/*    margin-bottom: 80px;*/
     text-align: center;
 }
 
